Stopped saving search queries, and fixed glitch when destroying people Made it so that search queries aren't saved in session. Made it so that if a person is destroyed, their birth record is too Moved some css into people.css.scss and out of the view

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -7,3 +7,24 @@
 	color: #999;
 	padding: 5px;
 }
+
+.node {
+  cursor: pointer;
+}
+
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
+}
+
